base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitoring
  labels:
    app: alertmanager
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 9093
    protocol: TCP
    targetPort: 9093
  - name: cluster
    port: 9094
    protocol: TCP
    targetPort: 9094
  selector:
    app: alertmanager
