base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx-private
  tls:
  - hosts:
    - alertmanager.apps-stage.in.hinisoft.com
    secretName: alertmanager-tls
  rules:
  - host: alertmanager.apps-stage.in.hinisoft.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alertmanager
            port:
              number: 9093
